--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kognitiva",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Plataforma Kognitiva - API Inteligente",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "verifica:aliases": "node -e \"require('module-alias/register'); console.log('✅ Aliases configurados corretamente')\"",
+    "verify:aliases": "node -e \"require('module-alias/register'); console.log('✅ Aliases configurados corretamente')\"",
     "prepare": "husky install",
     "docker:build": "docker build -t kognitiva-api .",
     "docker:run": "docker run -p 3000:3000 -e NODE_ENV=production kognitiva-api",
@@ -132,4 +132,3 @@
     "npm": "9.8.1"
   }
 }
-
