--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kognitiva",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Plataforma Kognitiva - API Inteligente",
   "main": "index.js",
   "scripts": {
@@ -9,14 +9,15 @@
     "test": "cross-env NODE_ENV=test jest --watchAll --detectOpenHandles --runInBand",
     "test:ci": "cross-env NODE_ENV=test jest --ci --runInBand --coverage",
     "verify:paths": "node ./scripts/verifyPaths.js || echo 'Path verification skipped'",
-    "prestart": "echo 'Running prestart checks...'",
+    "prestart": "npm run verify:paths && node -e \"require('module-alias/register'); console.log('Module aliases verified')\"",
     "docker:build": "docker build -t kognitiva-api .",
     "docker:run": "docker run -p 3000:3000 -e NODE_ENV=production kognitiva-api",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "prepare": "husky install",
-    "healthcheck": "curl -fs http://localhost:$PORT/health || exit 1"
+    "healthcheck": "curl -fs http://localhost:$PORT/health || exit 1",
+    "postinstall": "node -e \"try { require('module-alias/register'); console.log('Module aliases setup complete'); } catch(e) { console.error('Module alias setup failed:', e); process.exit(1); }\""
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -38,7 +39,8 @@
     "pg": "^8.11.3",
     "pino": "^8.16.0",
     "pino-pretty": "^10.2.3",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "require-alias": "^1.1.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
@@ -102,7 +104,8 @@
     "src/",
     "index.js",
     "knexfile.js",
-    "scripts/"
+    "scripts/",
+    "module-alias.js"
   ],
   "license": "MIT",
   "repository": {
