--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "cross-env NODE_ENV=test jest --watchAll --detectOpenHandles --runInBand",
     "test:ci": "cross-env NODE_ENV=test jest --ci --runInBand --coverage",
     "verify:paths": "node ./scripts/verifyPaths.js || echo 'Path verification skipped'",
-    "prestart": "npm run verify:paths && node -e \"require('module-alias/register'); console.log('Module aliases verified')\"",
+    "prestart": "npm run verify:paths && node -e \"try { require('module-alias/register'); console.log('Module aliases verified'); } catch(e) { console.error('Module alias verification failed:', e.message); process.exit(1); }\"",
     "docker:build": "docker build -t kognitiva-api .",
     "docker:run": "docker run -p 3000:3000 -e NODE_ENV=production kognitiva-api",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -17,7 +17,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "prepare": "husky install",
     "healthcheck": "curl -fs http://localhost:$PORT/health || exit 1",
-    "postinstall": "node -e \"try { require('module-alias/register'); console.log('Module aliases setup complete'); } catch(e) { console.error('Module alias setup failed:', e); process.exit(1); }\""
+    "postinstall": "node -e \"try { require('module-alias/register'); console.log('Module aliases setup complete'); } catch(e) { console.error('Module alias setup failed:', e.message); process.exit(1); }\""
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -39,8 +39,7 @@
     "pg": "^8.11.3",
     "pino": "^8.16.0",
     "pino-pretty": "^10.2.3",
-    "swagger-ui-express": "^5.0.0",
-    "require-alias": "^1.1.0"
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
