--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
       "^@root/(.*)$": "<rootDir>/$1",
       "^@config/(.*)$": "<rootDir>/src/config/$1",
       "^@controllers/(.*)$": "<rootDir>/src/controllers/$1",
-      "^@services/(.*)$": "<rootDir>/src/src/services/$1",  
+      "^@services/(.*)$": "<rootDir>/src/services/$1",  
       "^@routes/(.*)$": "<rootDir>/src/routes/$1",
       "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
       "^@models/(.*)$": "<rootDir>/src/models/$1",
@@ -98,7 +98,7 @@
     "@root": ".",
     "@config": "src/config",
     "@controllers": "src/controllers",
-    "@services": "src/src/services",  
+    "@services": "src/services",  
     "@routes": "src/routes",
     "@middleware": "src/middleware",
     "@models": "src/models",
