--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "start:prod": "npm run build && npm run start",
     "dev": "nodemon -r module-alias/register index.js",
     "build": "npm run lint && npm run test",
-    "test": "cross-env NODE_ENV=test jest --watchAll --detectOpenHandles",
-    "test:unit": "cross-env NODE_ENV=test jest --runInBand --testPathPattern=unit",
-    "test:integration": "cross-env NODE_ENV=test jest --runInBand --testPathPattern=integration",
-    "test:ci": "cross-env NODE_ENV=test jest --ci --runInBand --coverage",
-    "test:e2e": "cross-env NODE_ENV=test jest --runInBand --testPathPattern=e2e",
+    "test": "mocha --require module-alias/register",
+    "test:unit": "mocha --require module-alias/register test/unit",
+    "test:integration": "mocha --require module-alias/register test/integration",
     "migrate": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
@@ -59,7 +57,8 @@
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
+    "mocha": "^10.0.0",
+    "chai": "^4.3.4",
     "jest-environment-node": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "nodemon": "^3.0.2",
@@ -72,7 +71,7 @@
       "^@root/(.*)$": "<rootDir>/$1",
       "^@config/(.*)$": "<rootDir>/src/config/$1",
       "^@controllers/(.*)$": "<rootDir>/src/controllers/$1",
-      "^@services/(.*)$": "<rootDir>/src/services/$1",  
+      "^@services/(.*)$": "<rootDir>/src/services/$1",  // Caminho corrigido para src/services
       "^@routes/(.*)$": "<rootDir>/src/routes/$1",
       "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
       "^@models/(.*)$": "<rootDir>/src/models/$1",
@@ -98,7 +97,7 @@
     "@root": ".",
     "@config": "src/config",
     "@controllers": "src/controllers",
-    "@services": "src/services",  
+    "@services": "src/services",  // Caminho corrigido para src/services
     "@routes": "src/routes",
     "@middleware": "src/middleware",
     "@models": "src/models",
@@ -134,4 +133,3 @@
     "npm": "9.8.1"
   }
 }
-
