--- a/package.json
+++ b/package.json
@@ -1,135 +1,34 @@
 {
   "name": "kognitiva",
   "version": "1.1.8",
-  "description": "Plataforma Kognitiva - API Inteligente",
+  "description": "Plataforma Kognitiva - IA para Negócios",
   "main": "index.js",
   "scripts": {
-    "verify:aliases": "node -e \"try { require('module-alias/register'); console.log('✅ Aliases configurados corretamente'); } catch(e) { console.error('❌ Erro nos aliases:', e.message); process.exit(1); }\"",
-    "prestart": "npm run verify:aliases",
-    "start": "NODE_ENV=production node --no-warnings -r module-alias/register index.js",
-    "start:prod": "npm run build && npm run start",
-    "dev": "nodemon -r module-alias/register index.js",
-    "build": "npm run lint && npm run test",
-    "test": "mocha --require module-alias/register",
-    "test:unit": "mocha --require module-alias/register test/unit",
-    "test:integration": "mocha --require module-alias/register test/integration",
-    "migrate": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback",
-    "migrate:make": "knex migrate:make",
-    "db:seed": "knex seed:run",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "jest --watchAll --detectOpenHandles",
+    "test:unit": "jest --runInBand --testPathPattern=unit",
+    "test:integration": "jest --runInBand --testPathPattern=integration",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "prepare": "husky install",
-    "docker:build": "docker build -t kognitiva-api .",
-    "docker:run": "docker run -p 3000:3000 -e NODE_ENV=production kognitiva-api",
-    "healthcheck": "curl -f http://localhost:$PORT/health || exit 1",
-    "audit:fix": "npm audit fix"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "axios": "^1.6.2",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.19.2",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.8.1",
-    "helmet": "^7.1.0",
-    "http-status-codes": "^2.2.0",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^2.5.1",
-    "module-alias": "^2.2.3",
-    "pg": "^8.11.3",
-    "pino": "^8.16.0",
-    "pino-pretty": "^10.2.3",
-    "swagger-ui-express": "^5.0.0"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "ioredis": "^4.17.3",
+    "pg": "^8.7.1",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.6.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.3",
-    "mocha": "^10.0.0",
-    "chai": "^4.3.4",
-    "jest-environment-node": "^29.7.0",
-    "jest-mock-extended": "^3.0.5",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.0",
-    "supertest": "^6.3.3",
-    "testcontainers": "^10.4.0"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "^@root/(.*)$": "<rootDir>/$1",
-      "^@config/(.*)$": "<rootDir>/src/config/$1",
-      "^@controllers/(.*)$": "<rootDir>/src/controllers/$1",
-      "^@services/(.*)$": "<rootDir>/src/services/$1",  
-      "^@routes/(.*)$": "<rootDir>/src/routes/$1",
-      "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
-      "^@models/(.*)$": "<rootDir>/src/models/$1",
-      "^@utils/(.*)$": "<rootDir>/utils/$1",
-      "^@agents/(.*)$": "<rootDir>/src/agents/$1"
-    },
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": ["./jest.setup.js"],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/tests/",
-      "/src/config/",
-      "/src/middleware/"
-    ],
-    "testTimeout": 30000
+    "nodemon": "^2.0.7",
+    "eslint": "^7.30.0",
+    "jest": "^27.0.6"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0",
-    "bun": ">=1.0.0"
+    "node": ">=14.0.0"
   },
-  "_moduleAliases": {
-    "@root": ".",
-    "@config": "src/config",
-    "@controllers": "src/controllers",
-    "@services": "src/services",  
-    "@routes": "src/routes",
-    "@middleware": "src/middleware",
-    "@models": "src/models",
-    "@utils": "utils",
-    "@agents": "src/agents"
-  },
-  "files": [
-    "dist/",
-    "src/",
-    "index.js",
-    "knexfile.js"
-  ],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kognitivamitsuo/kognitiva-backend.git"
-  },
-  "bugs": {
-    "url": "https://github.com/kognitivamitsuo/kognitiva-backend/issues"
-  },
-  "homepage": "https://github.com/kognitivamitsuo/kognitiva-backend#readme",
-  "keywords": [
-    "AI",
-    "chatbot",
-    "nodejs",
-    "postgresql",
-    "redis",
-    "api",
-    "backend"
-  ],
-  "volta": {
-    "node": "18.18.2",
-    "npm": "9.8.1"
-  }
+  "author": "Kognitiva",
+  "license": "ISC"
 }
+
