--- a/package.json
+++ b/package.json
@@ -1,31 +1,47 @@
 {
-  "name": "kognitiva",
-  "version": "1.1.8",
-  "description": "Plataforma Kognitiva - IA para Negócios",
-  "main": "index.js",
+  "name": "kognitiva-fullstack",
+  "version": "1.0.0",
+  "description": "Plataforma Kognitiva (Fullstack)",
+  "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
-    "dev": "NODE_ENV=development nodemon index.js",
-    "test": "jest --watchAll --detectOpenHandles",
-    "test:unit": "jest --runInBand --testPathPattern=unit",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    // Backend
+    "start": "NODE_ENV=production node backend/src/index.js",
+    "dev:backend": "nodemon backend/src/index.js",
+    "test:backend": "cd backend && jest",
+    "test:integration": "cd backend && jest --runInBand",  // Testes de integração
+
+    // Frontend
+    "dev:frontend": "vite frontend",
+    "build:frontend": "vite build frontend",
+    "preview:frontend": "vite preview frontend",
+    "test:frontend": "jest frontend",  // Testes do frontend
+
+    // Tudo
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "build": "npm run build:frontend"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "ioredis": "^4.17.3",
-    "pg": "^8.7.1",
-    "axios": "^0.21.1",
-    "dotenv": "^10.0.0"
+    // Backend
+    "express": "^5.0.0",  // Atualizado para a versão 5.x
+    "ioredis": "^5.3.2",
+    "pg": "^8.11.3",
+    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.6.7",
+    "dotenv-safe": "^8.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "jest": "^27.0.6",
-    "eslint": "^7.30.0"
+    // Backend
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    
+    // Frontend
+    "vite": "^5.0.0",
+    "dompurify": "^3.0.5",
+    
+    // Ferramentas
+    "concurrently": "^8.2.2"
   },
   "engines": {
-    "node": ">=14.0.0"
-  },
-  "license": "ISC"
+    "node": ">=18.0.0"
+  }
 }
