--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "dev:frontend": "vite frontend",
     "build:frontend": "vite build frontend",
     "preview:frontend": "vite preview frontend",
-    "test:frontend": "jest frontend",  // Testes do frontend
+    "test:frontend": "jest frontend",  
 
     
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "build": "npm run build:frontend"
   },
   "dependencies": {
-    // Backend
     "express": "^5.0.0",  
     "ioredis": "^5.3.2",
     "pg": "^8.11.3",
