--- a/package.json
+++ b/package.json
@@ -1,46 +1,83 @@
 {
   "name": "kognitiva-fullstack",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Plataforma Kognitiva (Fullstack)",
   "private": true,
   "scripts": {
-    
     "start": "NODE_ENV=production node backend/src/index.js",
+    "start:frontend": "NODE_ENV=production vite preview --port 4173",
     "dev:backend": "nodemon backend/src/index.js",
-    "test:backend": "cd backend && jest",
-    "test:integration": "cd backend && jest --runInBand",  
-    
-    
     "dev:frontend": "vite frontend",
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "cd backend && npm ci --omit=dev",
     "build:frontend": "vite build frontend",
-    "preview:frontend": "vite preview frontend",
-    "test:frontend": "jest frontend",  
-
-    
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "build": "npm run build:frontend"
+    "test": "npm run test:backend && npm run test:frontend",
+    "test:backend": "cd backend && jest --coverage",
+    "test:integration": "cd backend && jest --runInBand integration/",
+    "test:frontend": "cd frontend && vitest",
+    "lint": "eslint . --ext .js,.vue",
+    "lint:fix": "eslint . --ext .js,.vue --fix",
+    "prepare": "husky install",
+    "dev": "concurrently -n BACKEND,FRONTEND -c bgBlue.bold,bgGreen.bold \"npm run dev:backend\" \"npm run dev:frontend\""
   },
   "dependencies": {
-    "express": "^5.0.0",  
+    
+    "express": "^5.0.0",
+    "express-async-errors": "^3.1.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "rate-limit-redis": "^3.0.0",
+    
+    
     "ioredis": "^5.3.2",
     "pg": "^8.11.3",
+    "sequelize": "^6.37.1",
+    
+    
     "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "oauth2-server": "^3.1.1",
+    
+    
     "axios": "^1.6.7",
-    "dotenv-safe": "^8.2.0"
+    "dotenv-safe": "^8.2.0",
+    "winston": "^3.11.0",
+    "http-status-codes": "^2.2.0",
+    
+    
+    "vue": "^3.4.19",
+    "pinia": "^2.1.7"
   },
   "devDependencies": {
-   
+    
     "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.6.0",
     
-   
+    
     "vite": "^5.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "dompurify": "^3.0.5",
+    "vitest": "^1.3.1",
+    "@testing-library/vue": "^7.0.0",
     
     
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.5"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
