--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "kognitiva-backend",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node --no-warnings src/index.js",
     "build": "npm install",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js --experimental-specifier-resolution=node"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^5.0.0",
     "ioredis": "^5.3.2",
     "pg": "^8.11.3",
     "jsonwebtoken": "^9.0.2",
-    "dotenv-safe": "^8.2.0"
+    "dotenv-safe": "^8.2.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   }
 }
