--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kognitiva-backend",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "node --experimental-vm-modules src/index.js",
+    "start": "node src/index.js",
     "build": "npm install",
-    "dev": "nodemon --experimental-vm-modules src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^5.0.0",
@@ -14,7 +14,10 @@
     "pg": "^8.11.3",
     "jsonwebtoken": "^9.0.2",
     "dotenv-safe": "^8.2.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "winston": "^3.11.0",
+    "http-status-codes": "^2.2.0"
   },
   "engines": {
     "node": ">=18.0.0"
