--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "kognitiva-backend",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "build": "npm install",
+    "build": "npm install && npm run build:assets",
+    "build:assets": "echo 'Building assets...'",
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
@@ -15,9 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "dotenv-safe": "^8.2.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "winston": "^3.11.0",
-    "http-status-codes": "^2.2.0"
+    "helmet": "^7.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
