--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "kognitiva-backend",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "build": "npm install && npm run build:assets",
-    "build:assets": "echo 'Building assets...'",
+    "build": "npm install",
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
@@ -16,7 +15,10 @@
     "jsonwebtoken": "^9.0.2",
     "dotenv-safe": "^8.2.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^6.8.1",
+    "rate-limit-redis": "^3.0.0",
+    "winston": "^3.11.0"
   },
   "engines": {
     "node": ">=18.0.0"
