--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "node tests/simulacoes.js"
+    "test": "node tests/simulacoes.js",
+    "build": "echo '✅ Nenhuma etapa de build necessária para o backend Kognitiva v3.6.'"
   },
-  "keywords": ["kognitiva", "backend", "ia", "gpt", "express", "jwt", "postgres", "redis"],
+  "keywords": [
+    "kognitiva",
+    "backend",
+    "ia",
+    "gpt",
+    "express",
+    "jwt",
+    "postgres",
+    "redis"
+  ],
   "author": "Kognitiva • Mitsuo AI Architect",
   "license": "MIT",
   "dependencies": {
@@ -24,3 +34,4 @@
     "nodemon": "^3.0.2"
   }
 }
+
