--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Kognitiva • Mitsuo AI Architect",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -34,4 +35,3 @@
     "nodemon": "^3.0.2"
   }
 }
-
